<resources>
    <string name="app_name">Robot</string>
    <string name="start">Start</string>
    <string name="getOut">Get Out</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity">Articles_POO</string>
    <string name="username">Username</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_login">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sig_in">Registrarse</string>
    <string name="name">Nombre: </string>
    <string name="lastName">Apellido: </string>
    <string name="pasword">Contraseña: </string>
    <string name="adress">Dirección: </string>
    <string name="postal">Código postal</string>
    <string name="cardNum">Número de tarjeta</string>
    <string name="before">Atrás</string>
    <string name="edit">Guardar cambios</string>
    <string name="editbtn">Editar artículos</string>
    <string name="deletebtn">Eliminar artículos</string>

    <string name="spn_title">Artículo</string>
    <string-array name="articles_array">
        <item>Blusa</item>
        <item>Gorra</item>
        <item>Abrigo</item>
        <item>Vestido</item>
        <item>Pantalon</item>
        <item>Camisa</item>
        <item>Short</item>
        <item>Medias</item>
        <item>Traje de bañ0</item>
        <item>Camiseta</item>
    </string-array>
    <string name="spn_title2">Color</string>
    <string-array name="colors_array">
        <item>Blanco</item>
        <item>Negro</item>
        <item>Azul</item>
    </string-array>
</resources>
