<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sigIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-53dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="72dp" />

    <EditText
        android:id="@+id/lblname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/lastName"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="155dp" />

    <EditText
        android:id="@+id/lbllastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="244dp" />

    <EditText
        android:id="@+id/lblusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/pasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/pasword"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="333dp" />

        <EditText
            android:id="@+id/lblpasword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="367dp" />

        <TextView
        android:id="@+id/adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/adress"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="415dp" />

    <EditText
        android:id="@+id/lbladress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/postal"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="503dp" />

    <EditText
        android:id="@+id/lblpostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="537dp" />

    <TextView
        android:id="@+id/cardNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cardNum"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="583dp" />

    <EditText
        android:id="@+id/lblcardnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="1234567890"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="617dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

    <Button
        android:id="@+id/btnSigIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sig_in"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


        <Button
            android:id="@+id/btnBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:backgroundTint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/before" />

    </LinearLayout>
        <AutoCompleteTextView
            android:id="@+id/edit_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="default value" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>